--- a/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
@@ -1,123 +1,74 @@
-<!--<div class="content-wrapper">-->
-  <!--<section class="content-header">-->
-    <!--<h1>Widget Section</h1>-->
-    <!--<ol class="breadcrumb">-->
-      <!--<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>-->
-      <!--<li><a href="#">Tables</a></li>-->
-      <!--<li class="active">Data tables</li>-->
-    <!--</ol>-->
-  <!--</section>-->
-  <!--<section class="content">-->
-    <!--<div class="row">-->
-      <!--<div class="col-xs-12">-->
-        <!--<div class="box">-->
-          <!--<div class="box-header">-->
-            <!--<h3 class="box-title">List of all Widgets</h3>-->
-          <!--</div>-->
-          <!--&lt;!&ndash; /.box-header &ndash;&gt;-->
-          <!--<div class="box-body">-->
-            <!--<div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12"><table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">-->
-              <!--<thead>-->
-              <!--<tr role="row">-->
-                <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">#</th>-->
-                <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">Website-Url</th>-->
-                <!--<th class="sorting_desc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" aria-sort="descending">Number</th>-->
-                <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">Department</th>-->
-                <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">No. of Message</th>-->
-                <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">On Going Chat</th>-->
-                <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Resolve Chat</th>-->
-                <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Created At</th>-->
-                <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Script URL</th>-->
-                <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Action</th>-->
-              <!--</tr>-->
-              <!--</thead>-->
-              <!--<tbody>-->
-              <!--<tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).widget.list; let i = index">-->
-                <!--<td>{{i}}</td>-->
-                <!--<td>{{item.website}}</td>-->
-                <!--<td>{{item.twilio_numbers?.number}}</td>-->
-                <!--<td><span *ngFor="let dep of item.widget_department, let j=index">{{dep.department_details.department_name}}{{j === item.widget_department.length - 1 ? '' : ', '}}</span></td>-->
-                <!--<td></td>-->
-                <!--<td></td>-->
-                <!--<td></td>-->
-                <!--<td>{{item.created_at}}</td>-->
-                <!--<td>{{item.script_url}}</td>-->
-                <!--<td>-->
-                  <!--&lt;!&ndash; Single button &ndash;&gt;-->
-                  <!--<div class="btn-group" [appDropdown]="'open'" disable-hover="true">-->
-                    <!--<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-                      <!--Action <span class="caret"></span>-->
-                    <!--</button>-->
-                    <!--<ul class="dropdown-menu">-->
-                      <!--<li> <a (click)="onEditWidget(item.id)"><i class="fa fa-pencil" aria-hidden="true"></i>Edit</a> </li>-->
-                    <!--</ul>-->
-                  <!--</div>-->
-                <!--</td>-->
-              <!--</tr>-->
-              <!--</tbody>-->
-              <!--<tfoot>-->
-                <!--<tr role="row">-->
-                  <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">#</th>-->
-                  <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Rendering engine: activate to sort column ascending">Website-Url</th>-->
-                  <!--<th class="sorting_desc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" aria-sort="descending">Number</th>-->
-                  <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">Department</th>-->
-                  <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">No. of Message</th>-->
-                  <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">On Going Chat</th>-->
-                  <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Resolve Chat</th>-->
-                  <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Created At</th>-->
-                  <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Script URL</th>-->
-                  <!--<th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Action</th>-->
-                <!--</tr>-->
-              <!--</tfoot>-->
-            <!--</table>-->
-            <!--</div>-->
-            <!--</div>-->
-              <!--<div class="row">-->
-                <!--<div class="col-sm-5">-->
-                  <!--<div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div>-->
-                <!--</div>-->
-                <!--<div class="col-sm-7 text-right">-->
-                  <!--<div class="dataTables_paginate paging_simple_numbers" id="example2_paginate">-->
-                    <!--<ul class="pagination">-->
-                      <!--<li class="paginate_button previous disabled" id="example2_previous">-->
-                        <!--<a href="#" aria-controls="example2" data-dt-idx="0" tabindex="0">Previous</a>-->
-                      <!--</li>-->
-                      <!--<li class="paginate_button active">-->
-                        <!--<a href="#" aria-controls="example2" data-dt-idx="1" tabindex="0">1</a>-->
-                      <!--</li>-->
-                      <!--<li class="paginate_button ">-->
-                        <!--<a href="#" aria-controls="example2" data-dt-idx="2" tabindex="0">2</a>-->
-                      <!--</li>-->
-                      <!--<li class="paginate_button ">-->
-                        <!--<a href="#" aria-controls="example2" data-dt-idx="3" tabindex="0">3</a>-->
-                      <!--</li>-->
-                      <!--<li class="paginate_button ">-->
-                        <!--<a href="#" aria-controls="example2" data-dt-idx="4" tabindex="0">4</a>-->
-                      <!--</li>-->
-                      <!--<li class="paginate_button ">-->
-                        <!--<a href="#" aria-controls="example2" data-dt-idx="5" tabindex="0">5</a>-->
-                      <!--</li>-->
-                      <!--<li class="paginate_button ">-->
-                        <!--<a href="#" aria-controls="example2" data-dt-idx="6" tabindex="0">6</a>-->
-                      <!--</li>-->
-                      <!--<li class="paginate_button next" id="example2_next">-->
-                        <!--<a href="#" aria-controls="example2" data-dt-idx="7" tabindex="0">Next</a>-->
-                      <!--</li>-->
-                    <!--</ul>-->
-                  <!--</div>-->
-                <!--</div>-->
-              <!--</div>-->
-            <!--</div>-->
-          <!--</div>-->
-          <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
-        <!--</div>-->
-        <!--&lt;!&ndash; /.box &ndash;&gt;-->
-        <!--<div class="msg-popup">-->
-          <!--<p>This is a success msg!</p>-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--&lt;!&ndash; /.col &ndash;&gt;-->
-    <!--</div>-->
-    <!--&lt;!&ndash; /.row &ndash;&gt;-->
-  <!--</section>-->
-<!--</div>-->
+<div class="content-wrapper">
+  <section class="content-header">
+    <h1>Widget Section</h1>
+    <ol class="breadcrumb">
+      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+      <li><a href="#">Tables</a></li>
+      <li class="active">Data tables</li>
+    </ol>
+  </section>
+  <section class="content">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="box">
+          <div class="box-header">
+            <h3 class="box-title">List of all Widgets</h3>
+          </div>
+          <!-- /.box-header -->
+          <div class="box-body">
+            <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12"><table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
+              <thead>
+              <tr role="row">
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Website-Url</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Number</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Department</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">No. of Message</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">On Going Chat</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Resolve Chat</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Created At</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Script URL</th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Action</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).widget.list; let i = index">
+                <td>{{i+1}}</td>
+                <td>{{item.website}}</td>
+                <td>{{item.twilio_numbers?.number}}</td>
+                <td><span *ngFor="let dep of item.widget_department, let j=index">{{dep.department_details.department_name}}{{j === item.widget_department.length - 1 ? '' : ', '}}</span></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>{{item.created_at}}</td>
+                <td>{{item.script_url}}</td>
+                <td>
+                  <!-- Single button -->
+                  <div class="btn-group" [appDropdown]="'open'" disable-hover="true">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Action <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li> <a (click)="onEditWidget(item.id)"><i class="fa fa-pencil" aria-hidden="true"></i>Edit</a> </li>
+                    </ul>
+                  </div>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+            </div>
+            </div>
+                <!-- Pagination -->
+              <div class="row">
+                <!-- Pagination hare -->
+              </div>
+            </div>
+          </div>
+          <!-- /.box-body -->
+        </div>
+      </div>
+      <!-- /.col -->
+    </div>
+    <!-- /.row -->
+  </section>
+</div>
