--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -31,37 +31,25 @@
                                         <tr role="row">
                                             <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
                                             <th tabindex="0" rowspan="1" colspan="1"
-                                                [class.active]="order === 'admin.list.first_name'"
-                                                (click)="setOrder('admin.list.first_name')"
-                                                class="mdl-data-table__cell--non-numeric">First Name <span
-                                                    [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                                                class="mdl-data-table__cell--non-numeric">First Name </th>
                                             <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
-                                                [class.active]="order === 'admin.list.last_name'"
-                                                (click)="setOrder('admin.list.last_name')"
-                                                class="mdl-data-table__cell--non-numeric">Last Name <span
-                                                    [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                                                class="mdl-data-table__cell--non-numeric">Last Name </th>
                                             <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
-                                                [class.active]="order === 'admin.list.company'"
-                                                (click)="setOrder('admin.list.company')"
-                                                class="mdl-data-table__cell--non-numeric">Company <span
-                                                    [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                                                class="mdl-data-table__cell--non-numeric">Company </th>
                                             <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Email</th>
                                             <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Phone</th>
                                             <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Twilio
                                                 SID
                                             </th>
                                             <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
-                                                [class.active]="order === 'admin.list.email'"
-                                                (click)="setOrder('admin.list.email')"
-                                                class="mdl-data-table__cell--non-numeric">Register Date <span
-                                                    [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                                                class="mdl-data-table__cell--non-numeric">Register Date </th>
                                             <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Action
                                             </th>
                                         </tr>
                                         </thead>
                                         <tbody>
                                         <tr role="row" class="odd"
-                                            *ngFor="let item of (afterLoginState | async).admin.list | filter : term | orderBy: order:reverse:'case-insensitive' | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
+                                            *ngFor="let item of (afterLoginState | async).admin.list | filter : term | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
                                             <td>{{i+1}}</td>
                                             <td>{{item.first_name}}</td>
                                             <td>{{item.last_name}}</td>
