--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -24,17 +24,17 @@
               <thead>
               <tr role="row">
                 <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'agent.list.first_name'" (click)="setOrder('agent.list.first_name')" class="mdl-data-table__cell--non-numeric">First Name <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'agent.list.last_name'" (click)="setOrder('agent.list.last_name')" class="mdl-data-table__cell--non-numeric">Last Name <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'agent.list.company'" (click)="setOrder('agent.list.company')" class="mdl-data-table__cell--non-numeric">Company <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">First Name </th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">Last Name </th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">Company </th>
                 <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Email </th>
                 <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'agent.list.created_at'" (click)="setOrder('agent.list.created_at')" class="mdl-data-table__cell--non-numeric">Register Date <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">Register Date </th>
                 <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Action</th>
               </tr>
               </thead>
               <tbody>
-              <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).agent.list | filter : term | orderBy: order:reverse:'case-insensitive' | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
+              <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).agent.list | filter : term | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
                 <td>{{i+1}}</td>
                 <td>{{item.first_name}}</td>
                 <td>{{item.last_name}}</td>
