--- a/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
+++ b/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
@@ -21,13 +21,13 @@
               <thead>
               <tr role="row">
                 <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'client_info.client_name.name'" (click)="setOrder('client_info.client_name.name')" class="mdl-data-table__cell--non-numeric">Client Name<span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">Client Name </th>
                 <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Email</th>
                 <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Phone</th>
               </tr>
               </thead>
               <tbody>
-                <tr role="row" class="odd" *ngFor="let item of (chatState | async).contactList | filter : term | orderBy: order:reverse:'case-insensitive' | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
+                <tr role="row" class="odd" *ngFor="let item of (chatState | async).contactList | filter : term | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
                 <td>{{i}}</td>
                 <td>{{item.client_info.client_name.name}}</td>
                 <td>{{item.client_info.client_name.email}}</td>
