--- a/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
@@ -27,16 +27,16 @@
               <thead>
               <tr role="row">
                 <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'agentList.first_name'" (click)="setOrder('agentList.first_name')" class="mdl-data-table__cell--non-numeric">First Name <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'agentList.last_name'" (click)="setOrder('agentList.last_name')" class="mdl-data-table__cell--non-numeric" >Last Name <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">First Name </th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric" >Last Name </th>
                 <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Email</th>
                 <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" [class.active]="order === 'agentList.department_name'" (click)="setOrder('agentList.department_name')" class="mdl-data-table__cell--non-numeric">Department <span [hidden]="reverse">▼</span><span [hidden]="!reverse">▲</span></th>
+                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">Department </th>
                 <th  tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Action</th>
               </tr>
               </thead>
               <tbody>
-                <tr role="row" class="odd" *ngFor="let item of (chatState | async).agentList | filter : term | orderBy: order:reverse:'case-insensitive' | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
+                <tr role="row" class="odd" *ngFor="let item of (chatState | async).agentList | filter : term | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
                 <td>{{i+1}}</td>
                 <td>{{item.first_name}}</td>
                 <td>{{item.last_name}}</td>
