--- a/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
@@ -13,7 +13,7 @@
                 <div class="box box-primary">
                     <!-- /.box-header -->
                     <div class="box-body" *ngIf="(authState | async).twilioIsActive">
-                        <form #form="ngForm" (submit)="onSubmit(form)">
+                        <form #form="ngForm" (submit)="onSubmit(form)" ngNativeValidate>
 
                             <div class="box-header with-border">
                                 <h3 class="box-title">
@@ -180,7 +180,7 @@
                                     </div>
                                     <span *ngIf="fileUpload.invalid && fileUpload.touched && postedImage===undefined" class="help-block">Website URL is Required!</span>
                                     <div class="col-md-6" *ngIf="!hideUploadedImage">
-                                            <div class="image">
+                                            <div class="image" *ngIf="imgSrc">
                                                 <i class="fa fa-times-circle fa-pull-right"
                                                    aria-hidden="true"
                                                    (click)="removeUploadedImage()"
@@ -218,80 +218,61 @@
 
                             <div class="row" *ngIf="selectedAdmin.value > 0">
                                 <!-- From Time -->
-                                <!--<div class="col-md-6" [ngClass]="(timeDirectivePickerModel1.invalid && timeDirectivePickerModel1.touched) ? 'has-error': ''">-->
-                                <div class="col-md-6">
+                                <div class="col-md-6" [ngClass]="(startTime.invalid && startTime.touched) ? 'has-error': ''">
+                                <!--<div class="col-md-6">-->
                                     <div class="form-group">
                                         <label class="control-label" for="startTime">
-                                            <!--<i *ngIf="timeDirectivePickerModel1.invalid && timeDirectivePickerModel1.touched"-->
-                                               <!--class="fa fa-times-circle-o">-->
-                                            <!--</i>-->
+                                            <i *ngIf="startTime.invalid && startTime.touched"
+                                               class="fa fa-times-circle-o">
+                                            </i>
                                              From Time
                                         </label>
-                                        <!--<input id="startTime"-->
-                                               <!--class="form-control"-->
-                                               <!--[dpDayPicker]="config"-->
-                                               <!--name="startTime"-->
-                                               <!--#dateDirectivePicker1="dpDayPicker"-->
-                                               <!--#timeDirectivePickerModel1="ngModel"-->
-                                               <!--mode="time"-->
-                                               <!--[ngModel]="widget.startTime"-->
-                                               <!--[placeholder]="'Choose a time ...'"-->
-                                               <!--[required]="'required'"-->
-                                               <!--(onChange)="log1($event)"-->
-                                               <!--[theme]="'dp-material dp-main'"-->
-                                        <!--/>-->
-                                        <!--<span *ngIf="timeDirectivePickerModel1.invalid && timeDirectivePickerModel1.touched && timeDirectivePickerModel1.errors?.required" class="help-block">Start Time is Required!</span>-->
-                                        <input atp-time-picker [ngModel]="widget.startTime" [value]="widget.startTime" name="startTime"/>
-                                        <!--<input [owlDateTimeTrigger]="dt4" [owlDateTime]="dt4" [(ngModel)]="startTime" name="startTime">-->
-                                        <!--<owl-date-time [pickerType]="'timer'" #dt4></owl-date-time>-->
-                                        <!--<owl-date-time-inline [(ngModel)]="selectedMoment"></owl-date-time-inline>-->
-                                        <!--<input type="text" [ngModel]="widget.startTime" name="startTime"-->
-                                               <!--class="form-control" [ngClass]="custom-cls"-->
-                                               <!--[ng2-simple-timepicker]="{disableTextInput: false,'timeFormat':'HH:mm',showDuration:false}"/>-->
+                                        <!--<div class="col-md-10">-->
+                                        <!--<input [ngModel]="widget.startTime" name="startTime" class="form-control" #startTime="ngModel" required id="startTime"/>-->
+                                        <!--</div>-->
+                                        <!--<div class="col-md-2">-->
+                                        <!--<button type="button" (click)="openTimer()">Time</button>-->
+                                        <!--</div>-->
+                                        <!--<span *ngIf="startTime.invalid && startTime.touched && startTime.errors?.required" class="help-block">Start Time is Required!</span>-->
+                                        <!--<div class="input-group mb-3">-->
+                                            <!--<input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">-->
+                                            <!--<div class="input-group-append">-->
+                                                <!--<span class="input-group-text" id="basic-addon2">@example.com</span>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                        <div class="input-group">
+                                            <input [ngModel]="widget.startTime" name="startTime" class="form-control" #startTime="ngModel" required id="startTime"/>
+                                            <span class="input-group-addon" (click)="openTimer()"><i class="glyphicon glyphicon-time"></i></span>
+                                        </div>
+                                        <span *ngIf="startTime.invalid && startTime.touched && startTime.errors?.required" class="help-block">Start Time is Required!</span>
                                     </div>
+
                                 </div>
 
                                 <!-- To Time -->
-                                <!--<div class="col-md-6" [ngClass]="(timeDirectivePickerModel2.invalid && timeDirectivePickerModel2.touched) ? 'has-error': ''">-->
-                                <div class="col-md-6">
+                                <div class="col-md-6"  [ngClass]="(endTime.invalid && endTime.touched) || timePikerError ? 'has-error': ''">
                                     <div class="form-group" >
                                         <label class="control-label" for="endTime">
-                                            <!--<i *ngIf="timeDirectivePickerModel2.invalid && timeDirectivePickerModel2.touched"-->
-                                               <!--class="fa fa-times-circle-o">-->
-                                            <!--</i>-->
+                                            <i *ngIf="(endTime.invalid && endTime.touched) || timePikerError" class="fa fa-times-circle-o"> </i>
                                              To Time
                                         </label>
-                                        <!--<input id="endTime"-->
-                                               <!--class="form-control"-->
-                                               <!--[dpDayPicker]="config"-->
-                                               <!--name="endTime"-->
-                                               <!--#dateDirectivePicker2="dpDayPicker"-->
-                                               <!--#timeDirectivePickerModel2="ngModel"-->
-                                               <!--mode="time"-->
-                                               <!--[ngModel]="widget.endTime"-->
-                                               <!--[placeholder]="'Choose a time ...'"-->
-                                               <!--[minTime]="validationMinTime"-->
-                                               <!--[required]="'required'"-->
-                                               <!--(onChange)="log2($event)"-->
-                                               <!--[theme]="'dp-material dp-main'"-->
-                                        <!--/>-->
+                                        <input atp-time-picker [ngModel]="widget.endTime" name="endTime" #endTime="ngModel" class="form-control" (ngModelChange)="log2($event)" required type="text" id="endTime"/>
+                                        <!--<div class="input-group">-->
+                                            <!--&lt;!&ndash;<input [ngModel]="widget.endTime" name="endTime" class="form-control" #endTime="ngModel" required id="endTime"  (ngDoCheck)="log2($event)" />&ndash;&gt;-->
+                                            <!--<input [ngModel]="widget.endTime" name="endTime" #endTime="ngModel" class="form-control"  [required]="'required'" type="text" id="endTime" (ngModelChange)="log2($event)"/>-->
+                                            <!--<span class="input-group-addon" (click)="openEndTimer()"><i class="glyphicon glyphicon-time"></i></span>-->
+                                        <!--</div>-->
+                                        <span *ngIf="timePikerError" class="help-block">End Time Should before Start Time</span>
+                                        <span *ngIf="endTime.invalid && endTime.touched && endTime.errors?.required" class="help-block">End Time is Required</span>
 
-                                            <!--<span *ngIf="timeDirectivePickerModel2.invalid && timeDirectivePickerModel2.touched && timeDirectivePickerModel2.errors?.required" class="help-block">End Time is Required</span>-->
-                                            <!--<span *ngIf="timeDirectivePickerModel2.invalid && timeDirectivePickerModel2.touched && timeDirectivePickerModel2.errors?.minTime" class="help-block">End Time Should before Start Time</span>-->
-                                        <!--<input [owlDateTimeTrigger]="dt5" [owlDateTime]="dt5" [ngModel]="widget.endTime" name="endTime" [required]="'required'">-->
-                                        <!--<owl-date-time [pickerType]="'timer'" #dt5></owl-date-time>-->
-                                        <!--<input type="text" [ngModel]="widget.endTime" name="endTime"-->
-                                               <!--class="form-control" [ngClass]="custom-cls"-->
-                                               <!--[ng2-simple-timepicker]="{disableTextInput: false,'timeFormat':'HH:mm',showDuration:false}"/>-->
-                                        <!--<input type="text" [ngModel]="widget.endTime" [value]="widget.endTime" name="endTime" class="timepicker">-->
-                                        <input atp-time-picker [ngModel]="widget.endTime" [value]="widget.endTime" name="endTime"/>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="col-md-12">
                                 <div class="box-footer">
-                                    <button type="submit" [disabled]="form.invalid" class="btn btn-primary pull-right">
+                                    <button type="submit" [disabled]="timePikerError || form.invalid" class="btn btn-primary pull-right">
+                                        <i *ngIf ="loader" class="fa fa-spinner fa-spin"></i>
                                         Submit
                                     </button>
                                 </div>
