--- a/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
@@ -45,6 +45,7 @@
                 </div>
 
                 <div class="col-md-6" *ngIf="selectedAdmin.value > 0">
+                    <div class="col-md-4">
                     <div class="form-group">
                     <label class="control-label" for="department">
                       Department for Agent
@@ -66,6 +67,10 @@
                       </option>
                     </select>
                   </div>
+                    </div>
+                    <div class="col-md-2">
+                        <button class="btn btn-warning btn-md" style="margin-top: 25px;" type="button" (click)="createDepartment(template)"> Create Department</button>
+                    </div>
                 </div>
 
               </div>
@@ -189,5 +194,67 @@
       <!-- /.col -->
     </div>
     <!-- /.row -->
+      <ng-template #template>
+          <div class="modal-header">
+              <h4 class="modal-title pull-left">Create Department </h4>
+              <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body row">
+              <form #form="ngForm" (submit)="onCreateDep(form)">
+                  <input type="hidden"
+                         id="userId"
+                         name="userId"
+                         [ngModel]="dep.userId"
+                         #userId="ngModel">
+              <div class="col-md-6">
+                  <div class="form-group" [ngClass]="(dName.invalid && dName.touched) ? 'has-error': ''">
+                      <label class="control-label" for="name">
+                          <i *ngIf="dName.invalid && dName.touched" class="fa fa-times-circle-o"></i>
+                          Department Name
+                      </label>
+                      <input type="text"
+                             class="form-control"
+                             id="name"
+                             name="departmentName"
+                             [ngModel]="dep.departmentName"
+                             #dName="ngModel"
+                             required
+                             placeholder="Enter ..."
+                      >
+                      <span *ngIf="dName.invalid && dName.touched" class="help-block">Your Department Name is Required!</span>
+                  </div>
+              </div>
+                  <div class="col-md-6">
+                      <div class="form-group" [ngClass]="{ 'has-error': dDes.invalid && dDes.touched }">
+                          <label class="control-label" for="detail">
+                              <i *ngIf="dDes.invalid && dDes.touched" class="fa fa-times-circle-o"></i>
+                              Department Description
+                          </label>
+                          <input type="text"
+                                 class="form-control"
+                                 id="detail"
+                                 name="departmentDetails"
+                                 ngModel
+                                 [ngModel]="dep.departmentDetails"
+                                 #dDes="ngModel"
+                                 required
+                                 placeholder="Enter ..."
+                          >
+                          <span *ngIf="dDes.invalid && dDes.touched" class="help-block">Your Department Description is Required!</span>
+                      </div>
+                  </div>
+                  <div class="col-md-12">
+                      <button type="submit"
+                              [disabled]="form.invalid"
+                              class="btn btn-primary pull-right"
+                      >
+                          <i *ngIf="loader" class="fa fa-spinner fa-spin"></i> Submit
+                      </button>
+                  </div>
+              </form>
+          </div>
+      </ng-template>
   </section>
 </div>
