--- a/src/app/core/layout/sidebar/sidebar.component.html
+++ b/src/app/core/layout/sidebar/sidebar.component.html
@@ -38,28 +38,7 @@
           </a>
         </li>
 
-        <li class="header" *ngIf="(authState | async).isSuperAdmin">CREDENTIALS</li>
-
-        <!-- Twilio Accounts -->
-        <li class="treeview"
-            *ngIf="(authState | async).isSuperAdmin"
-            routerLinkActive="active"
-            [disable-hover]="true"
-            [appDropdown]="'menu-open'"
-        >
-          <a>
-            <i class="fa fa-compress"></i> <span> Twilio Accounts</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            <li><a routerLink="/twilio/create"><i class="fa fa-circle-o"></i> Create</a></li>
-            <li><a routerLink="/twilio/list"><i class="fa fa-circle-o"></i> List</a></li>
-          </ul>
-        </li>
-
-        <li class="header" *ngIf="(authState | async).isSuperAdmin || (authState | async).isAdmin">OTHER USERS</li>
+        <li class="header" *ngIf="(authState | async).isSuperAdmin || (authState | async).isAdmin">USER ACCOUNTS</li>
 
         <!-- Admins -->
         <li class="treeview"
@@ -99,7 +78,7 @@
           </ul>
         </li>
 
-        <li class="header" *ngIf="(authState | async).isSuperAdmin || (authState | async).isAdmin">ACCOUNTS</li>
+        <li class="header" *ngIf="(authState | async).isSuperAdmin || (authState | async).isAdmin">ORGANIZATION</li>
 
         <!-- Departments -->
         <li class="treeview"
@@ -209,6 +188,27 @@
                 </span>
           </a>
         </li>
+          <!-- Twilio Accounts -->
+          <li class="header" *ngIf="(authState | async).isSuperAdmin">CREDENTIALS</li>
+
+          <li class="treeview"
+              *ngIf="(authState | async).isSuperAdmin"
+              routerLinkActive="active"
+              [disable-hover]="true"
+              [appDropdown]="'menu-open'"
+          >
+              <a>
+                  <i class="fa fa-compress"></i> <span> Twilio Accounts</span>
+                  <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+              </a>
+              <ul class="treeview-menu">
+                  <li><a routerLink="/twilio/create"><i class="fa fa-circle-o"></i> Create</a></li>
+                  <li><a routerLink="/twilio/list"><i class="fa fa-circle-o"></i> List</a></li>
+              </ul>
+          </li>
+          <!-- Twilio Accounts -->
       </ul>
     </section>
     <!-- /.sidebar -->
