--- a/src/app/core/layout/inner-pages/chat/rejected/rejected.component.html
+++ b/src/app/core/layout/inner-pages/chat/rejected/rejected.component.html
@@ -3,8 +3,8 @@
     <h1>Pending Chats</h1>
     <ol class="breadcrumb">
       <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
-      <li><a href="#">Tables</a></li>
-      <li class="active">Data tables</li>
+      <li>Rejected Chats</li>
+      <li class="active">Chats</li>
     </ol>
   </section>
   <section class="content">
