--- a/src/app/core/layout/sidebar/sidebar.component.html
+++ b/src/app/core/layout/sidebar/sidebar.component.html
@@ -143,7 +143,7 @@
               </a>
             </li>
             <li>
-              <a routerLink="/chat/ongoing">
+              <a href="/chat/ongoing">
                 <i class="fa fa-circle-o"></i> <span>Ongoing Chats</span>
                 <span class="pull-right-container">
                   <small class="label pull-right bg-green">8</small>
