--- a/src/app/core/layout/inner-pages/chat/rejected/rejected.component.html
+++ b/src/app/core/layout/inner-pages/chat/rejected/rejected.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
   <section class="content-header">
-    <h1>Pending Chats</h1>
+    <h1>Rejected Chats</h1>
     <ol class="breadcrumb">
       <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
       <li>Rejected Chats</li>
