--- a/src/app/core/layout/sidebar/sidebar.component.html
+++ b/src/app/core/layout/sidebar/sidebar.component.html
@@ -135,27 +135,23 @@
           </a>
           <ul class="treeview-menu">
             <li>
-              <a routerLink="/chat/pending">
+              <a href="/chat/pending">
                 <i class="fa fa-circle-o"></i> <span>Pending Chats</span>
-                <span class="pull-right-container">
-                  <small class="label pull-right bg-yellow">2</small>
-                </span>
               </a>
             </li>
             <li>
               <a href="/chat/ongoing">
                 <i class="fa fa-circle-o"></i> <span>Ongoing Chats</span>
-                <span class="pull-right-container">
-                  <small class="label pull-right bg-green">8</small>
-                </span>
               </a>
             </li>
             <li>
-              <a routerLink="/chat/rejected">
+              <a href="/chat/rejected">
                 <i class="fa fa-circle-o"></i> <span>Rejected Chats</span>
-                <span class="pull-right-container">
-                  <small class="label pull-right bg-red">5</small>
-                </span>
+              </a>
+            </li>
+            <li>
+              <a href="/chat/resolve">
+                <i class="fa fa-circle-o"></i> <span>Resolve Chats</span>
               </a>
             </li>
           </ul>
